--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
-    "motion": "^12.4.2",
-    "next": "14.2.4",
+    "motion": "^12.6.3",
+    "next": "^14.2.26",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
